# Legal-TE-and-IR

./: .gitignore  bm25_system.py  cli.py  data_filtering.py  download_patent_data.py  embedding_rankings.py  ipProposal.txt  pyproject.toml  stop_list.py  term_embedding_rankings.py  term_extraction.py  test_all_methods.py  tfidf.py  utilities.py
